Fixed issues with building with JDK9